test/Fail/Issue394-4.err
Issue394-4.agda:5.32: error: [ParseError]
Malformed syntax declaration: syntax must not contain adjacent holes (A B)
